k3s/kustomize/environments/prod/container-registry/ui/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: container-registry-ui
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
      - kind: Rule
        match: Host(`registry-ui.local.hejsan.xyz`)
        services:
          - kind: Service
            name: container-registry-ui
            port: http
